# TasksGenerator

./: CMakeLists.txt  README.md
cmake/: Files.cmake  FuncTests.cmake  ModuleMaker.cmake
include/: Task.h  funcrions.h
src/: functions.cpp  main.cpp
